MODSHSLIDE-211 #resolve #comment Number alignment for all browsers

--- a/code/media/mod_jsshackslides/css/jsshackslides.css
+++ b/code/media/mod_jsshackslides/css/jsshackslides.css
@@ -195,30 +195,22 @@
 	pointer-events: initial;
 }
 .jss-slider .jss-navigation .jss-navigation-dots .owl-dot > div > span {
-	margin: 0;
-	height: 100%;
-	width: 100%;
-	position: relative;
 	z-index: 1;
-	display: -webkit-box;
-	display: -moz-box;
-	display: -ms-flexbox;
-	display: -webkit-flex;
-	display: flex;
-	-webkit-box-align: center; -moz-box-align: center;
-	-ms-flex-align: center;
-	-webkit-align-items: center;
-	align-items: center;
-	-webkit-box-pack: center; -moz-box-pack: center;
-	-ms-flex-pack: center;
-	-webkit-justify-content: center;
-	justify-content: center;
 	font-size: small;
 	-webkit-pointer-events: initial;
 	-moz-pointer-events: initial;
 	-ms-pointer-events: initial;
 	-o-pointer-events: initial;
 	pointer-events: initial;
+	position: absolute;
+	margin: auto;
+	display: block;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	text-align: center;
+	vertical-align: baseline;
 }
 .jss-slider .jss-navigation .jss-navigation-buttons {
 	text-align: center;
